Fix Cloud Build error: Add logging option for custom service account

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,5 +21,9 @@ steps:
     - '--region'
     - 'asia-northeast1'
 
+
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 images:
   - 'gcr.io/$PROJECT_ID/glossary-scraper:$COMMIT_SHA'
