--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,29 +1,36 @@
 
 steps:
-  # Dockerイメージのビルド
+  # 1. Web App (Next.js) のビルド
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/glossary-scraper:$COMMIT_SHA', '.']
+    args: [
+      'build', 
+      '-t', 'gcr.io/$PROJECT_ID/toushibu-glossary:$COMMIT_SHA',
+      '-f', 'glossary-site/Dockerfile',
+      '.'
+    ]
 
-  # イメージをContainer Registryにプッシュ
+  # 2. イメージをプッシュ
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/glossary-scraper:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/toushibu-glossary:$COMMIT_SHA']
 
-  # Cloud Runへのデプロイ（ジョブとして実行する場合を想定）
+  # 3. Cloud Run サービスへのデプロイ
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
-    - 'run'
-    - 'jobs'
-    - 'deploy'
-    - 'glossary-scraper-job'
-    - '--image'
-    - 'gcr.io/$PROJECT_ID/glossary-scraper:$COMMIT_SHA'
-    - '--region'
-    - 'asia-northeast1'
-
+      - 'run'
+      - 'deploy'
+      - 'toushibu-glossary'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/toushibu-glossary:$COMMIT_SHA'
+      - '--region'
+      - 'asia-northeast1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
 
 options:
   logging: CLOUD_LOGGING_ONLY
 
 images:
-  - 'gcr.io/$PROJECT_ID/glossary-scraper:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/toushibu-glossary:$COMMIT_SHA'
+
