--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
       'build', 
       '-t', 'gcr.io/$PROJECT_ID/toushibu-glossary:$COMMIT_SHA',
       '-f', 'glossary-site/Dockerfile',
-      '.'
+      'glossary-site'
     ]
 
   # 2. イメージをプッシュ
